Edited relative paths, removed the folder prefix

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <script src='https://apis.google.com/js/api.js'></script>
 
   <!-- Moj CSS i JS skripta-->
-  <link rel="stylesheet" href="css/cover.css" type="text/css" />
-  <script src='js/main.js'></script>
+  <link rel="stylesheet" href="cover.css" type="text/css" />
+  <script src='main.js'></script>
 </head>
 
 <body id="root">
