--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Bookworm</title>
+  <title>Bookoala</title>
   <!-- Semantic-UI i Jquery -->
   <script src="https://code.jquery.com/jquery-3.1.1.min.js"
     integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
@@ -11,21 +11,21 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"
     integrity="sha256-9mbkOfVho3ZPXfM7W8sV2SndrGDuh7wuyLjtsWeTI1Q=" crossorigin="anonymous" />
   
-  <script src='js/oauth.js'></script>
+  <script src='oauth.js'></script>
   <!-- Google API -->
   <script async defer src="https://apis.google.com/js/api.js" onload="this.onload=function(){};handleClientLoad()"
       onreadystatechange="if (this.readyState === 'complete') this.onload()">
       </script>
 
   <!-- Moj CSS i JS skripta-->
-  <link rel="stylesheet" href="css/cover.css" type="text/css" />
+  <link rel="stylesheet" href="cover.css" type="text/css" />
   
 </head>
 
 <body id="root">
   <div class="ui inverted vertical center aligned segment">
     <nav class="ui container">
-      <h1 class="ui inverted header">Bookworm</h1>
+      <h1 class="ui inverted header">Bookoala</h1>
       <div class="ui borderless inverted compact menu">
         <a class="active item">Test page</a>
         <a class="item">My books</a>
